--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.orion.orion">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <dist:module dist:instant="true" />
+
     <application
         android:name=".util.MyApplication"
         android:allowBackup="true"
@@ -15,7 +27,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".contest.create.CreatedActivity"></activity>
+        <activity android:name=".QuizActivity"></activity>
+        <activity android:name=".contest.create.CreatedActivity" />
         <activity android:name=".contest.joined.JoinedActivity" />
         <activity android:name=".contest.upcoming.UpcomingContestActivity" />
         <activity android:name=".NotificationActivity" />
@@ -49,8 +62,7 @@
         <activity android:name=".contest.Contest_Evaluation.activity_view_media" />
         <activity android:name=".contest.result.ResultDeclaredActivity" />
         <activity android:name=".contest.jury_voting_media" />
-        <activity android:name=".contest.public_voting_media" />
-        <!-- Leaderboard Section -->
+        <activity android:name=".contest.public_voting_media" /> <!-- Leaderboard Section -->
         <activity android:name=".LeaderboardActivity" /> <!-- Profile Section -->
         <activity
             android:name=".profile.profile"
@@ -80,17 +92,5 @@
             </intent-filter>
         </service>
     </application>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.CAMERA" />
-
-    <dist:module dist:instant="true" />
 
 </manifest>
