--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,18 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.orion.orion">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA" />
-
-    <dist:module dist:instant="true" />
-
     <application
         android:name=".util.MyApplication"
         android:allowBackup="true"
@@ -27,8 +15,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".QuizActivity"></activity>
-        <activity android:name=".contest.jury_voting_Activity"></activity>
+        <activity android:name=".contest.Contest_Evaluation.ChatRoomActivity" />
+        <activity android:name=".QuizActivity" />
+        <activity android:name=".contest.jury_voting_Activity" />
         <activity android:name=".contest.create.CreatedActivity" />
         <activity android:name=".contest.joined.JoinedActivity" />
         <activity android:name=".contest.upcoming.UpcomingContestActivity" />
@@ -62,9 +51,8 @@
         <activity android:name=".contest.Contest_Evaluation.contest_evaluation_activity" />
         <activity android:name=".contest.Contest_Evaluation.activity_view_media" />
         <activity android:name=".contest.result.ResultDeclaredActivity" />
-        <activity android:name=".contest.jury_voting_media" />
         <activity android:name=".contest.public_voting_media" /> <!-- Leaderboard Section -->
-        <activity android:name=".LeaderboardActivity" /> <!-- Profile Section -->
+        <activity android:name=".LeaderboardActivity" android:windowSoftInputMode="adjustPan" /> <!-- Profile Section -->
         <activity
             android:name=".profile.profile"
             android:noHistory="true" />
@@ -93,6 +81,17 @@
             </intent-filter>
         </service>
     </application>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
@@ -101,8 +100,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <dist:module dist:instant="true" />
 
     <dist:module dist:instant="true" />
 
